	+ Added storer property to types in order to store the data in
	somewhere different from GConf
	+ Added protected property 'volatile' to the models to indicate
	that they store nothing in GConf but in somewhere different
	+ System Menu item element 'RAID' is always visible even when RAID
	is not installed
        + Files in deleted rows are deleted when the changes are saved
	+ Components can be subModels of the HasMany type
0.12.100
	+ EBox::Module::writeConfFile and EBox::Service scape file's path
	+ Bugfix. Configure logrotate to actually rotate ebox logs
	+ Fixed bug in ForcePurge logs model
	+ Fixed bug in DataTable: ModelManaged was called with tableName
	instead of context Name
	+ Fixing an `img` tag closed now properly and adding alternative
	text to match W3C validation in head title
	+ Backup pages now includes the size of the archive
	+ Fixed bug in ForcePurge logs model
	+ Now the modules can have more than one tableInfo for logging information
	+ Improve model debugging 
	+ Improve restart debugging
	+ Backups and bug reports can be made from the command line
	+ Bugfix: `isEqualTo` is working now for `Boolean` types
	+ Bugfix: check if we must disable file modification checks in
	Manager::skipModification

0.12.99
	+ Add support for reporting
	+ Refresh logs automatically
	+ Reverse log order
	+ Remove temp file after it is downloaded with FromTempDir controller
0.12.3
	+ Bug fix: use the new API in purge method. Now purging logs is working
	again.
0.12.2
	+ Increase random string length used to generate the cookie to
	2048 bits
	+ Logs are show in inverse chronological order
0.12.1
	+ Bug fix: use unsafeParam for progress indicator or some i18 strings
	will fail when saving changes
0.12
	+ Bugfix: Don't assume timecol is 'timestamp' but defined by
	module developer. This allows to purge some logs tables again
	+ Add page titles to models
	+ Set default values when not given in `add` method in models
	+ Add method to manage page size in model